trunk/Archive2/3f/d810cf43cc1422/output
main.cpp:15:30: error: no matching constructor for initialization of 'std::priority_queue<int>'
    std::priority_queue<int> c3(std::less<int>(), deq);
                             ^  ~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/v1/queue:433:5: note: candidate constructor not viable: no known conversion from 'std::deque<int>' to 'const container_type' (aka 'const std::__1::vector<int, std::__1::allocator<int> >') for 2nd argument
    priority_queue(const value_compare& __comp, const container_type& __c);
    ^
/usr/include/c++/v1/queue:435:14: note: candidate constructor not viable: no known conversion from 'std::deque<int>' to 'container_type' (aka 'std::__1::vector<int, std::__1::allocator<int> >') for 2nd argument
    explicit priority_queue(const value_compare& __comp, container_type&& __c);
             ^
/usr/include/c++/v1/queue:438:9: note: candidate template ignored: deduced conflicting types for parameter '_InputIter' ('std::__1::less<int>' vs. 'std::__1::deque<int, std::__1::allocator<int> >')
        priority_queue(_InputIter __f, _InputIter __l,
        ^
/usr/include/c++/v1/queue:450:43: note: candidate template ignored: disabled by 'enable_if' [with _Alloc = std::__1::less<int>]
                       typename enable_if<uses_allocator<container_type,
                                          ^
/usr/include/c++/v1/queue:454:43: note: candidate template ignored: disabled by 'enable_if' [with _Alloc = std::__1::deque<int, std::__1::allocator<int> >]
                       typename enable_if<uses_allocator<container_type,
                                          ^
/usr/include/c++/v1/queue:463:43: note: candidate template ignored: disabled by 'enable_if' [with _Alloc = std::__1::deque<int, std::__1::allocator<int> >]
                       typename enable_if<uses_allocator<container_type,
                                          ^
/usr/include/c++/v1/queue:473:43: note: candidate template ignored: disabled by 'enable_if' [with _Alloc = std::__1::deque<int, std::__1::allocator<int> >]
                       typename enable_if<uses_allocator<container_type,
                                          ^
/usr/include/c++/v1/queue:441:9: note: candidate constructor template not viable: requires 4 arguments, but 2 were provided
        priority_queue(_InputIter __f, _InputIter __l,
        ^
/usr/include/c++/v1/queue:445:9: note: candidate constructor template not viable: requires 4 arguments, but 2 were provided
        priority_queue(_InputIter __f, _InputIter __l,
        ^
/usr/include/c++/v1/queue:457:9: note: candidate constructor template not viable: requires at least 3 arguments, but 2 were provided
        priority_queue(const value_compare& __comp, const container_type& __c,
        ^
/usr/include/c++/v1/queue:467:9: note: candidate constructor template not viable: requires at least 3 arguments, but 2 were provided
        priority_queue(const value_compare& __comp, container_type&& __c,
        ^
/usr/include/c++/v1/queue:408:5: note: candidate constructor not viable: requires single argument '__q', but 2 arguments were provided
    priority_queue(const priority_queue& __q) : c(__q.c), comp(__q.comp) {}
    ^
/usr/include/c++/v1/queue:412:5: note: candidate constructor not viable: requires single argument '__q', but 2 arguments were provided
    priority_queue(priority_queue&& __q)
    ^
/usr/include/c++/v1/queue:431:14: note: candidate constructor not viable: requires single argument '__comp', but 2 arguments were provided
    explicit priority_queue(const value_compare& __comp)
             ^
/usr/include/c++/v1/queue:402:5: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
    priority_queue()
    ^
1 error generated.
